# identity_canister

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/identity_canister_project_backend/: Cargo.toml
src/identity_canister_project_backend/src/: lib.rs
src/identity_canister_project_frontend/: package.json
src/identity_canister_project_frontend/src/: App.js
