[package]
name = "identity_canister_project_backend"
version = "0.1.0"
edition = "2018"

[dependencies]
ic-cdk = "0.15" # or the latest version
ic-cdk-macros = "0.16" # or the latest version
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
candid = "0.10"
anyhow = "1.0"
[lib]
crate-type = ["cdylib"]


